--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 <body>
     <h1>Hola Francis</h1>
     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto blanditiis possimus necessitatibus eum ullam ad velit nemo alias, veritatis ipsam dolores reiciendis asperiores quae soluta fugiat voluptas iusto quis illo!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo et voluptas natus. Minus nostrum in incidunt vel adipisci. Sapiente alias provident eaque dolores nisi odio laboriosam architecto, officiis maxime.</h3>
+    <footer style="background: #222; color: #fff; text-align: center; padding: 20px 0; margin-top: 40px; font-family: Arial, sans-serif;">
+        <p>&copy; 2024 Francis. Todos los derechos reservados.</p>
+        <div style="margin-top: 10px;">
+            <a href="#" style="color: #ffd700; margin: 0 10px; text-decoration: none;">Inicio</a>
+            <a href="#" style="color: #ffd700; margin: 0 10px; text-decoration: none;">Contacto</a>
+            <a href="#" style="color: #ffd700; margin: 0 10px; text-decoration: none;">Acerca de</a>
+        </div>
+    </footer>
 </body>
 </html>
